--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,15 +1,16 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-    font-size: 62.5%; //Define Rem size
+  font-size: 62.5%; //Define Rem size
 }
 
 body {
-    box-sizing: border-box;
+  background-color: #e4dbee;
+  box-sizing: border-box;
 }
