--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,8 +5,14 @@
 }
 $font-b-yekan: "Yekan";
 
+$font-size-small: 1.8rem;
+$font-size-medium: 2.5rem;
+$font-size-big: 4rem;
+
 //Colors
 $color-light-grey: #f2f2f2f2;
 $color-primary: #ad4a4f;
 $color-second-primary: #a07fc4;
+$color-second-primary-active: #542c80bb;
 $color-balck: #1e1e1e;
+$color-black-main: #000;
