--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,12 +25,9 @@
       list-style: none;
       flex-direction: row;
       &--item {
-        font-family: $font-b-yekan;
         &--link {
           text-decoration: none;
           display: inline-block;
-          color: $color-second-primary;
-          font-size: $font-size-small;
           transition: all 0.2s ease-out;
           padding: 1rem 2rem;
           border-radius: 0.2rem;
@@ -47,43 +44,72 @@
       }
     }
   }
-}
-.header__user {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 12rem;
+  &__user {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 12rem;
+    &__shpping--ico {
+      display: inline-block;
+      font-size: $font-size-medium;
+      color: $color-second-primary;
+      transition: all 0.3s ease-out;
+      &:hover {
+        color: #796094;
+      }
+      &:active {
+        color: $color-second-primary-active;
+      }
+    }
+    &__signup-btn {
+      text-decoration: none;
+      font-family: $font-b-yekan;
+      display: inline-block;
+      font-size: $font-size-small - 0.2rem;
+      background-color: $color-second-primary;
+      border-radius: 1.8rem;
+      padding: 0.8rem 1.2rem;
+      color: $color-light-grey;
+      transition: all 0.3s ease-out;
+      &:hover {
+        background-color: #796094;
+      }
+      &:active {
+        background-color: $color-second-primary-active;
+      }
+    }
+  }
 }
 
-.header__user__shpping {
-}
-.header__user__shpping--ico {
-  display: inline-block;
-  font-size: $font-size-medium;
-  color: $color-second-primary;
-  transition: all 0.3s ease-out;
-  &:hover {
-    color: #796094;
-  }
-  &:active {
-    color: $color-second-primary-active;
-  }
-}
-
-.header__user__signup-btn {
-  text-decoration: none;
-  font-family: $font-b-yekan;
-  display: inline-block;
-  font-size: $font-size-small - 0.2rem;
-  background-color: $color-second-primary;
-  border-radius: 1.8rem;
-  padding: 0.8rem 1.2rem;
-  color: $color-light-grey;
-  transition: all 0.3s ease-out;
-  &:hover {
-    background-color: #796094;
-  }
-  &:active {
-    background-color: $color-second-primary-active;
+@media (max-width: 48rem) {
+  .header {
+    z-index: 1;
+    &__nav {
+      display: none;
+    }
+    &__logo {
+      width: 11rem;
+      text-align: center;
+      &--link {
+        cursor: pointer;
+      }
+      &--logo {
+        width: 100%;
+      }
+    }
+    &__user {
+      width: 8rem;
+      &__shpping--ico {
+        display: inline-block;
+        font-size: $font-size-medium - 0.7rem;
+      }
+      &__signup-btn {
+        text-decoration: none;
+        font-family: $font-b-yekan;
+        display: inline-block;
+        font-size: $font-size-small - 0.8rem;
+        padding: 0.4rem 0.9rem;
+      }
+    }
   }
 }
