--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,5 +14,6 @@ $color-light-grey: #f2f2f2f2;
 $color-primary: #ad4a4f;
 $color-second-primary: #a07fc4;
 $color-second-primary-active: #542c80bb;
-$color-balck: #1e1e1e;
+$color-black: #1e1e1e;
 $color-black-main: #000;
+$colors-back-ground: #e4dbee;
