--- a/sass/layout/_mobile-nav.scss
+++ b/sass/layout/_mobile-nav.scss
@@ -1,3 +1,13 @@
+.aside-background {
+  z-index: 2;
+  position: fixed;
+  width: 60vw;
+  height: 100vh;
+  background-color: rgba($color-primary, 0.5);
+  left: 0;
+  margin-left: -250rem;
+  transition: margin 0.6s;
+}
 .aside {
   z-index: 3;
   position: fixed;
@@ -7,9 +17,11 @@
   height: 100vh;
   background-color: rgba($color-black, 0.9);
   width: 40vw;
+  transition: margin 0.6s;
+  margin-right: -250rem;
   &__close {
     position: absolute;
-    top: 10%;
+    top: 7%;
     right: 82%;
     color: $color-second-primary;
     border: none;
@@ -21,8 +33,9 @@
   }
   &__items {
     margin: 0;
+    margin-top: -11rem;
     width: 100%;
-    height: 60%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
