--- a/sass/layout/_mobile-nav.scss
+++ b/sass/layout/_mobile-nav.scss
@@ -23,7 +23,7 @@
     position: absolute;
     top: 7%;
     right: 82%;
-    color: $color-second-primary;
+    color: $color-second-primary-navLink;
     border: none;
     background-color: rgba($color-black, 0);
     cursor: pointer;
