--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $font-size-big: 4rem;
 $color-light-grey: #f2f2f2f2;
 $color-primary: #ad4a4f;
 $color-second-primary: #a07fc4;
+$color-second-primary-navLink: #c69ff0;
 $color-second-primary-active: #542c80bb;
 $color-black: #1e1e1e;
 $color-black-main: #000;
