--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,7 +6,7 @@
 
 .aside-link {
   font-family: $font-b-yekan;
-  color: $color-second-primary;
+  color: $color-second-primary-navLink;
   font-size: $font-size-small - 0.2;
   text-decoration: none;
 }
