--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,3 +10,13 @@
   font-size: $font-size-small - 0.2;
   text-decoration: none;
 }
+
+.footer-list-title {
+  font-size: $font-size-small;
+  font-family: $font-b-yekan;
+}
+.footer-list-link {
+  font-size: $font-size-small - 0.3rem;
+  font-family: $font-b-yekan;
+  text-decoration: none;
+}
