--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,3 +14,10 @@ body {
   background-color: $colors-back-ground;
   box-sizing: border-box;
 }
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
