--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
   position: fixed;
   box-shadow: 0 0.7rem 1.7rem rgba($color-black-main, 0.2);
   width: 100%;
-  height: 10vh;
+  height: 12vh;
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
@@ -41,6 +41,7 @@
             // color: $color-light-grey;
             // background-color: $color-second-primary;
             transform: scale(1.25);
+            color: #8b54c5;
           }
           &:active {
             border-bottom: 1px solid $color-second-primary;
@@ -115,8 +116,8 @@
         text-decoration: none;
         font-family: $font-b-yekan;
         display: inline-block;
-        font-size: $font-size-small - 0.8rem;
-        padding: 0.4rem 0.9rem;
+        font-size: $font-size-small - 0.7rem;
+        padding: 0.5rem 0.9rem;
       }
     }
   }
