--- a/css/landing.css
+++ b/css/landing.css
@@ -377,6 +377,23 @@ body {
   background-color: #a07fc4;
 }
 
+.social-btn {
+  font-size: 3rem;
+  transition: all 0.2s ease-out;
+}
+.social-btn:hover {
+  transform: translateY(-0.7rem);
+}
+.social-btn:active {
+  transform: translateY(-0.15rem);
+}
+.social-btn--white {
+  color: rgba(242, 242, 242, 0.9490196078);
+}
+.social-btn--white:active {
+  color: #dedede;
+}
+
 .header {
   background-color: rgba(242, 242, 242, 0.9490196078);
   display: flex;
@@ -417,11 +434,12 @@ body {
   border-bottom: 1px solid rgba(242, 242, 242, 0.9490196078);
 }
 .header__nav__items--item--link:hover {
-  transform: scale(1.25);
+  transform: scale(1.25) translateY(-0.3rem);
   color: #8b54c5;
 }
 .header__nav__items--item--link:active {
   border-bottom: 1px solid #a07fc4;
+  transform: scale(1.25) translateY(0.2rem);
 }
 .header__user {
   display: flex;
@@ -480,18 +498,18 @@ body {
     width: 100%;
   }
   .header__user {
-    width: 8rem;
+    width: 10rem;
   }
   .header__user__shpping--ico {
     display: inline-block;
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
   .header__user__signup-btn {
     text-decoration: none;
     font-family: "Yekan";
     display: inline-block;
-    font-size: 1.1rem;
-    padding: 0.5rem 0.9rem;
+    font-size: 1.3rem;
+    padding: 0.7rem 0.9rem;
   }
 }
 .footer {
@@ -505,7 +523,7 @@ body {
   background-color: #ad4a4f;
   justify-content: space-around;
   align-items: center;
-  height: 40vh;
+  height: 45vh;
 }
 
 .footer__list {
@@ -531,9 +549,50 @@ body {
 .list__items__item__text {
   margin-bottom: 1rem;
   display: inline-block;
-  color: #f1f1f1;
+  color: rgba(242, 242, 242, 0.9490196078);
   padding-bottom: 0.4rem;
   border-bottom: 1px solid rgba(241, 241, 241, 0.4509803922);
+  transition: all 0.3s;
+}
+.list__items__item__text:hover, .list__items__item__text:active {
+  color: #d8d8d8;
+  border-bottom: none;
+}
+
+.footer__wrapper {
+  height: 16rem;
+}
+
+.footer__wrapper__social {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 0.5rem;
+  height: 70%;
+  padding: 2rem 4rem;
+  background-color: rgba(30, 30, 30, 0.7);
+}
+
+.footer__wrapper__social--paragraph {
+  color: rgba(242, 242, 242, 0.9490196078);
+  margin-bottom: 3rem;
+}
+
+.footer__wrapper__social__items {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  justify-content: space-around;
+}
+
+.footer__wrapper--slogan {
+  margin-top: 3rem;
+  color: rgba(242, 242, 242, 0.9490196078);
+  text-align: center;
+  font-size: 1.3rem;
+  font-family: "Yekan";
 }
 
 @media (max-width: 48rem) {
@@ -546,10 +605,12 @@ body {
     justify-content: space-around;
   }
   .list__items {
+    margin-top: 1.5rem;
     display: flex;
     flex-direction: row;
   }
   .list__items__item__title {
+    font-size: 1.3rem;
     margin-right: 1rem;
     margin-left: 1rem;
   }
@@ -557,7 +618,15 @@ body {
     content: " :";
   }
   .list__items__item__text {
-    margin-left: 1.2rem;
+    margin-left: 1.1rem;
+    font-size: 1.1rem;
+  }
+  .footer__wrapper__social--paragraph {
+    text-align: center;
+    font-size: 1.4rem;
+  }
+  .footer__wrapper__social__items__item--links .social-btn {
+    font-size: 2.5rem;
   }
 }
 .aside-background {
@@ -578,7 +647,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: rgba(30, 30, 30, 0.9);
+  background-color: rgba(30, 30, 30, 0.95);
   width: 40vw;
   transition: margin 0.6s;
   margin-right: -250rem;
