--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,7 +9,7 @@
   background-color: $color-primary;
   justify-content: space-around;
   align-items: center;
-  height: 40vh;
+  height: 45vh;
 }
 .footer__list {
   display: flex;
@@ -30,9 +30,57 @@
 .list__items__item__text {
   margin-bottom: 1rem;
   display: inline-block;
-  color: #f1f1f1;
+  color: $color-light-grey;
   padding-bottom: 0.4rem;
   border-bottom: 1px solid #f1f1f173;
+  transition: all 0.3s;
+  &:hover,
+  &:active {
+    color: #d8d8d8;
+    border-bottom: none;
+  }
+}
+
+.footer__wrapper {
+  height: 16rem;
+}
+
+.footer__wrapper__social {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 0.5rem;
+  height: 70%;
+  padding: 2rem 4rem;
+  background-color: rgba($color-black, 0.7);
+}
+
+.footer__wrapper__social--paragraph {
+  color: $color-light-grey;
+  margin-bottom: 3rem;
+}
+
+.footer__wrapper__social__items {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  justify-content: space-around;
+}
+
+.footer__wrapper__social__items__item {
+}
+
+.footer__wrapper__social__items__item--links {
+}
+
+.footer__wrapper--slogan {
+  margin-top: 3rem;
+  color: $color-light-grey;
+  text-align: center;
+  font-size: $font-size-small - 0.5rem;
+  font-family: $font-b-yekan;
 }
 
 @media (max-width: 48rem) {
@@ -46,9 +94,11 @@
     }
   }
   .list__items {
+    margin-top: 1.5rem;
     display: flex;
     flex-direction: row;
     &__item__title {
+      font-size: $font-size-small - 0.5rem;
       margin-right: 1rem;
       margin-left: 1rem;
       &::after {
@@ -58,6 +108,18 @@
   }
 
   .list__items__item__text {
-    margin-left: 1.2rem;
+    margin-left: 1.1rem;
+    font-size: $font-size-small - 0.7rem;
+  }
+
+  .footer__wrapper__social--paragraph {
+    text-align: center;
+    font-size: $font-size-small - 0.4rem;
+  }
+
+  .footer__wrapper__social__items__item--links {
+    .social-btn {
+      font-size: $font-size-medium;
+    }
   }
 } ;
