--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -14,6 +14,80 @@
   }
 }
 
+.to-the-top--btn {
+  z-index: 1;
+  text-decoration: none;
+  text-align: center;
+  color: #646464;
+  border: 0.5rem solid $color-primary;
+  outline: 0.2rem solid #444343;
+  position: absolute;
+  font-size: 2.6rem;
+  background-color: $color-light-grey;
+  margin-top: -2rem;
+  top: 0;
+  padding: 0.1rem 0.3rem;
+  border-radius: 5rem;
+  display: inline-block;
+  box-shadow: 0 0.4rem 2rem rgba($color-black, 0.5);
+  transition: all 0.2s ease-out;
+  &:hover {
+    transform: translateY(-0.5rem);
+  }
+
+  &:active {
+    transform: translateY(0.1rem);
+  }
+  i {
+    text-align: center;
+    display: block;
+  }
+}
+.dark-mod--btn {
+  text-decoration: none;
+  text-align: center;
+  color: #646464;
+  border: 0.5rem solid $color-primary;
+  outline: 0.2rem solid #444343;
+  position: absolute;
+  font-size: 2.6rem;
+  background-color: $color-light-grey;
+  margin-top: -2rem;
+  top: 0;
+  right: 7%;
+  padding: 0.1rem 0.3rem;
+  transition: all 0.2s ease-out;
+  cursor: pointer;
+  border-radius: 5rem;
+  display: inline-block;
+  box-shadow: 0 0.4rem 2rem rgba($color-black, 0.5);
+  &:hover {
+    transform: translateY(-0.5rem);
+  }
+
+  &:active {
+    transform: translateY(0.1rem);
+  }
+  i {
+    text-align: center;
+    display: block;
+  }
+}
+
+@media (max-width: 48rem) {
+  .to-the-top--btn {
+    right: 91%;
+    margin-top: -1.2rem;
+    font-size: 1.4rem;
+    padding: 0.1rem 0.3rem;
+  }
+  .dark-mod--btn {
+    right: 80%;
+    margin-top: -1.2rem;
+    font-size: 1.4rem;
+  }
+}
+
 .social-btn {
   font-size: 3rem;
   transition: all 0.2s ease-out;
