--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,7 +6,7 @@
   position: absolute;
   bottom: 0%;
   right: 0%;
-  background-color: $color-primary;
+  background-image: linear-gradient(190deg, $color-primary 55%, #d86c72);
   justify-content: space-around;
   align-items: center;
   height: 45vh;
@@ -32,12 +32,14 @@
   display: inline-block;
   color: $color-light-grey;
   padding-bottom: 0.4rem;
-  border-bottom: 1px solid #f1f1f133;
-  transition: all 0.3s;
+  border-bottom: 1px solid #f1f1f100;
+  transition: all 0.2s;
   &:hover,
   &:active {
     color: #d8d8d8;
     border-bottom: none;
+    border-bottom: 1px solid #d8d8d8;
+    transform: scale(1.09);
   }
 }
 
