--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
   background-color: $color-light-grey;
+  background-image: linear-gradient(70deg, $color-light-grey, #e6d0ff);
   display: flex;
   position: fixed;
   box-shadow: 0 0.7rem 1.7rem rgba($color-black-main, 0.2);
@@ -36,16 +37,16 @@
           transition: all 0.2s ease-out;
           padding: 1rem 2rem;
           border-radius: 0.2rem;
-          border-bottom: 1px solid $color-light-grey;
           &:hover {
+            border-bottom: 1px solid #8b54c5c4;
             // color: $color-light-grey;
             // background-color: $color-second-primary;
-            transform: scale(1.25) translateY(-0.3rem);
+            transform: scale(1.1) translateY(-0.3rem);
             color: #8b54c5;
           }
           &:active {
             border-bottom: 1px solid $color-second-primary;
-            transform: scale(1.25) translateY(0.2rem);
+            transform: scale(1.1) translateY(0.2rem);
           }
         }
       }
@@ -74,6 +75,7 @@
       display: inline-block;
       font-size: $font-size-small - 0.2rem;
       background-color: $color-second-primary;
+      border: 1px solid #a07fc400;
       border-radius: 1.8rem;
       padding: 0.8rem 1.2rem;
       color: $color-light-grey;
@@ -81,6 +83,7 @@
       box-shadow: 0 0.3rem 1rem rgba($color-black-main, 0.4);
       &:hover {
         background-color: #796094;
+        border: 1px solid #dab9fd;
       }
       &:active {
         background-color: $color-second-primary-active;
