--- a/css/landing.css
+++ b/css/landing.css
@@ -367,6 +367,7 @@ body {
   display: flex;
   flex-flow: column;
   justify-content: space-around;
+  background-color: rgba(255, 0, 0, 0);
   border: none;
   cursor: pointer;
 }
@@ -467,12 +468,12 @@ body {
 }
 
 .header {
-  background-color: rgba(242, 242, 242, 0.9490196078);
   background-image: linear-gradient(70deg, rgba(242, 242, 242, 0.9490196078), #e6d0ff);
   display: flex;
   position: fixed;
   box-shadow: 0 0.7rem 1.7rem rgba(0, 0, 0, 0.2);
   width: 100%;
+  top: 0%;
   height: 12vh;
   justify-content: space-around;
   align-items: center;
@@ -588,7 +589,7 @@ body {
   }
 }
 .footer {
-  z-index: 2;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -706,13 +707,18 @@ body {
   .footer__wrapper__social__items__item--links .social-btn {
     font-size: 2.5rem;
   }
+  .footer__wrapper--slogan {
+    font-size: 1.1rem;
+    margin-bottom: 3rem;
+  }
 }
 .aside-background {
   z-index: 2;
   position: fixed;
+  top: 0;
   width: 60vw;
   height: 100vh;
-  background-color: rgba(173, 74, 79, 0.5);
+  background-image: linear-gradient(350deg, rgba(255, 0, 0, 0.7), rgba(145, 57, 62, 0.8));
   left: 0;
   margin-left: -250rem;
   transition: margin 0.6s;
@@ -721,6 +727,7 @@ body {
 .aside {
   z-index: 3;
   position: fixed;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
