--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: column;
   justify-content: space-around;
+  background-color: rgba(255, 0, 0, 0);
   border: none;
   cursor: pointer;
   span {
