--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  z-index: 2;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -124,5 +124,9 @@
     .social-btn {
       font-size: $font-size-medium;
     }
+  }
+  .footer__wrapper--slogan {
+    font-size: $font-size-small - 0.7rem;
+    margin-bottom: 3rem;
   }
 } ;
