--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,11 @@
 .header {
-  background-color: $color-light-grey;
+  //background-color: $color-light-grey;
   background-image: linear-gradient(70deg, $color-light-grey, #e6d0ff);
   display: flex;
   position: fixed;
   box-shadow: 0 0.7rem 1.7rem rgba($color-black-main, 0.2);
   width: 100%;
+  top: 0%;
   height: 12vh;
   justify-content: space-around;
   align-items: center;
