--- a/sass/layout/_mobile-nav.scss
+++ b/sass/layout/_mobile-nav.scss
@@ -1,9 +1,10 @@
 .aside-background {
   z-index: 2;
   position: fixed;
+  top: 0;
   width: 60vw;
   height: 100vh;
-  background-color: rgba($color-primary, 0.5);
+  background-image: linear-gradient(350deg, rgba(red, 0.7), rgba(#91393e, 0.8));
   left: 0;
   margin-left: -250rem;
   transition: margin 0.6s;
@@ -11,6 +12,7 @@
 .aside {
   z-index: 3;
   position: fixed;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
