--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,7 @@
 .aside-link {
   font-family: $font-b-yekan;
   color: $color-second-primary-navLink;
-  font-size: $font-size-small - 0.2;
+  font-size: $font-size-small;
   text-decoration: none;
 }
 
