--- a/css/landing.css
+++ b/css/landing.css
@@ -346,7 +346,7 @@ body {
 .aside-link {
   font-family: "Yekan";
   color: #c69ff0;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   text-decoration: none;
 }
 
@@ -388,6 +388,7 @@ body {
   position: absolute;
   font-size: 2.6rem;
   background-color: rgba(242, 242, 242, 0.9490196078);
+  right: 2%;
   margin-top: -2rem;
   top: 0;
   padding: 0.1rem 0.3rem;
@@ -412,7 +413,7 @@ body {
   text-align: center;
   color: #646464;
   border: 0.5rem solid #ad4a4f;
-  outline: 0.2rem solid #444343;
+  outline: 0.3rem solid #444343;
   position: absolute;
   font-size: 2.6rem;
   background-color: rgba(242, 242, 242, 0.9490196078);
@@ -597,7 +598,7 @@ body {
   bottom: 0%;
   right: 0%;
   background-image: linear-gradient(190deg, #ad4a4f 55%, #d86c72);
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 45vh;
 }
@@ -716,7 +717,7 @@ body {
   z-index: 2;
   position: fixed;
   top: 0;
-  width: 60vw;
+  width: 55vw;
   height: 100vh;
   background-image: linear-gradient(350deg, rgba(255, 0, 0, 0.7), rgba(145, 57, 62, 0.8));
   left: 0;
@@ -733,7 +734,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: rgba(30, 30, 30, 0.95);
-  width: 40vw;
+  width: 45vw;
   transition: margin 0.6s;
   margin-right: -250rem;
 }
@@ -761,7 +762,11 @@ body {
 }
 .aside__items__item {
   border: 1px solid #a07fc4;
+  border-top-left-radius: 3rem;
+  border-bottom-left-radius: 3rem;
+  width: 39vw;
   border-right: none;
+  box-shadow: 0 0.2rem 6rem rgba(160, 127, 196, 0.6);
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
