--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -25,6 +25,7 @@
   position: absolute;
   font-size: 2.6rem;
   background-color: $color-light-grey;
+  right: 2%;
   margin-top: -2rem;
   top: 0;
   padding: 0.1rem 0.3rem;
@@ -49,7 +50,7 @@
   text-align: center;
   color: #646464;
   border: 0.5rem solid $color-primary;
-  outline: 0.2rem solid #444343;
+  outline: 0.3rem solid #444343;
   position: absolute;
   font-size: 2.6rem;
   background-color: $color-light-grey;
