--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,7 +7,7 @@
   bottom: 0%;
   right: 0%;
   background-image: linear-gradient(190deg, $color-primary 55%, #d86c72);
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 45vh;
 }
