--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/a-reset";
 @import "base/base";
 @import "base/typography";
+@import "base/utilities";
 
 //Components
 @import "components/buttons";
