--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,7 +16,7 @@
 }
 
 .to-the-top--btn {
-  z-index: 1;
+  z-index: 0;
   text-decoration: none;
   text-align: center;
   color: #646464;
@@ -39,6 +39,7 @@
 
   &:active {
     transform: translateY(0.1rem);
+    box-shadow: 0 0.4rem 0.5rem rgba($color-black, 0.5);
   }
   i {
     text-align: center;
@@ -46,13 +47,14 @@
   }
 }
 .dark-mod--btn {
+  z-index: 0;
   text-decoration: none;
   text-align: center;
   color: #646464;
   border: 0.5rem solid $color-primary;
-  outline: 0.3rem solid #444343;
+  outline: 0.2rem solid #444343;
   position: absolute;
-  font-size: 2.6rem;
+  font-size: 2.5rem;
   background-color: $color-light-grey;
   margin-top: -2rem;
   top: 0;
