--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-  z-index: 1;
+  z-index: 0;
   display: flex;
   flex-direction: row;
   width: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0%;
   right: 0%;
   background-image: linear-gradient(190deg, $color-primary 55%, #d86c72);
