--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,6 +6,7 @@
   box-shadow: 0 0.7rem 1.7rem rgba($color-black-main, 0.2);
   width: 100%;
   top: 0%;
+  left: 0%;
   height: 12vh;
   justify-content: space-around;
   align-items: center;
