--- a/css/landing.css
+++ b/css/landing.css
@@ -339,7 +339,7 @@ body {
 
 .nav-link {
   font-family: "Yekan";
-  color: #a07fc4;
+  color: #8d69b3;
   font-size: 1.8rem;
 }
 
@@ -353,10 +353,13 @@ body {
 .grid-title {
   font-family: "Yekan";
   font-size: 3.8rem;
-  text-shadow: 1px 7px 1.2rem rgba(30, 30, 30, 0.4);
+  text-shadow: 1px 7px 1.2rem rgba(30, 30, 30, 0.3);
 }
 .grid-title--purple {
-  color: #a07fc4;
+  color: #8d69b3;
+}
+.grid-title--red {
+  color: #ad4a4f;
 }
 
 .grid-text {
@@ -366,6 +369,14 @@ body {
   line-height: 2.5rem;
 }
 
+@media (max-width: 48rem) {
+  .grid-title {
+    font-size: 3rem;
+  }
+  .grid-text {
+    font-size: 1.5rem;
+  }
+}
 .footer-list-title {
   font-size: 1.8rem;
   font-family: "Yekan";
@@ -395,7 +406,7 @@ body {
   display: inline-block;
   width: 100%;
   height: 0.2rem;
-  background-color: #a07fc4;
+  background-color: #8d69b3;
 }
 
 .to-the-top--btn {
@@ -489,6 +500,12 @@ body {
 .social-btn--white:active {
   color: #dedede;
 }
+.social-btn--purple {
+  color: #8d69b3;
+}
+.social-btn--purple:active {
+  color: #785a99;
+}
 
 .header {
   background-image: linear-gradient(70deg, rgba(242, 242, 242, 0.9490196078), #e6d0ff);
@@ -497,6 +514,7 @@ body {
   box-shadow: 0 0.7rem 1.7rem rgba(0, 0, 0, 0.2);
   width: 100%;
   top: 0%;
+  left: 0%;
   height: 12vh;
   justify-content: space-around;
   align-items: center;
@@ -535,7 +553,7 @@ body {
   color: #8b54c5;
 }
 .header__nav__items--item--link:active {
-  border-bottom: 1px solid #a07fc4;
+  border-bottom: 1px solid #8d69b3;
   transform: scale(1.1) translateY(0.2rem);
 }
 .header__user {
@@ -547,7 +565,7 @@ body {
 .header__user__shpping--ico {
   display: inline-block;
   font-size: 2.5rem;
-  color: #a07fc4;
+  color: #8d69b3;
   transition: all 0.3s ease-out;
 }
 .header__user__shpping--ico:hover {
@@ -561,7 +579,7 @@ body {
   font-family: "Yekan";
   display: inline-block;
   font-size: 1.6rem;
-  background-color: #a07fc4;
+  background-color: #8d69b3;
   border: 1px solid rgba(160, 127, 196, 0);
   border-radius: 1.8rem;
   padding: 0.8rem 1.2rem;
@@ -629,6 +647,7 @@ body {
   display: flex;
   justify-content: space-around;
   width: 60%;
+  margin-top: 1.5rem;
 }
 
 .list__items {
@@ -690,7 +709,8 @@ body {
 }
 
 .footer__wrapper--slogan {
-  margin-top: 3rem;
+  margin: 0;
+  margin-top: 1.5rem;
   color: rgba(242, 242, 242, 0.9490196078);
   text-align: center;
   font-size: 1.3rem;
@@ -732,7 +752,6 @@ body {
   }
   .footer__wrapper--slogan {
     font-size: 1.1rem;
-    margin-bottom: 3rem;
   }
 }
 .aside-background {
@@ -741,7 +760,7 @@ body {
   top: 0;
   width: 99vw;
   height: 100vh;
-  background-image: linear-gradient(350deg, rgba(255, 0, 0, 0.7), rgba(145, 57, 62, 0.8));
+  background-image: linear-gradient(350deg, rgba(245, 4, 4, 0.7), rgba(145, 57, 62, 0.8));
   left: 0;
   margin-left: -250rem;
   transition: margin 0.6s;
@@ -783,12 +802,12 @@ body {
   list-style: none;
 }
 .aside__items__item {
-  border: 1px solid #a07fc4;
+  border: 1px solid #8d69b3;
   border-top-left-radius: 3rem;
   border-bottom-left-radius: 3rem;
   width: 39vw;
   border-right: none;
-  box-shadow: 0 0.2rem 6rem rgba(160, 127, 196, 0.6);
+  box-shadow: 0rem 0rem 2rem 1rem rgba(141, 105, 179, 0.3);
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -814,8 +833,77 @@ body {
 .main-grid-1__layaout-1 {
   display: flex;
   flex-direction: column;
+  text-align: center;
+  align-items: center;
   justify-content: space-around;
+  max-width: 50%;
   height: 100%;
+}
+.main-grid-1__layaout-1--box {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.main-grid-1__layaout-1--box--link {
+  display: inline-block;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+}
+@media (max-width: 48rem) {
+  .main-grid-1__layaout-1 {
+    max-width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.main-grid-1__layaout-2 {
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-grid-1__layaout-2 img {
+  width: 100%;
+}
+
+.main-grid-2 {
+  margin-top: 10rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.main-grid-2 .main-grid-2__layout-3 {
+  max-width: 50%;
+  text-align: center;
+}
+.main-grid-2__layout-4 {
+  max-width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-grid-2__layout-4 img {
+  display: inline-block;
+  width: 87%;
+}
+
+.main-grid-2__layout-3--title {
+  margin-bottom: 2.5rem;
+}
+
+.main-gird-2__layout-4 {
+  max-width: 50%;
+}
+.main-gird-2__layout-4 img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=landing.css.map */
