--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,6 +12,12 @@
 @mixin grid-flex-row-reverse {
   display: flex;
   flex-flow: row-reverse wrap;
+  align-items: center;
+}
+
+@mixin gird-flex-column {
+  display: flex;
+  flex-flow: column wrap;
   justify-content: space-around;
   align-items: center;
 }
