--- a/sass/layout/_mobile-nav.scss
+++ b/sass/layout/_mobile-nav.scss
@@ -4,7 +4,11 @@
   top: 0;
   width: 99vw;
   height: 100vh;
-  background-image: linear-gradient(350deg, rgba(red, 0.7), rgba(#91393e, 0.8));
+  background-image: linear-gradient(
+    350deg,
+    rgba(rgb(245, 4, 4), 0.7),
+    rgba(#91393e, 0.8)
+  );
   left: 0;
   margin-left: -250rem;
   transition: margin 0.6s;
@@ -48,7 +52,7 @@
       border-bottom-left-radius: 3rem;
       width: 39vw;
       border-right: none;
-      box-shadow: 0 0.2rem 6rem rgba($color-second-primary, 0.6);
+      box-shadow: 0rem 0rem 2rem 1rem rgba($color-second-primary, 0.3);
       padding-top: 1rem;
       padding-bottom: 1rem;
     }
