--- a/css/landing.css
+++ b/css/landing.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Yekan";
-  src: url("../../fonts/B_Yekan/Yekan.ttf");
+  src: url(..\..\f onts\b _Yekan/Yekan.ttf);
 }
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
