--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 //Fonts
 @font-face {
   font-family: "Yekan";
-  src: url("../../fonts/B_Yekan/Yekan.ttf");
+  src: url(..\..\fonts\B_Yekan/Yekan.ttf);
 }
 $font-b-yekan: "Yekan";
 
