--- a/fonts/B_Yekan/font.css
+++ b/fonts/B_Yekan/font.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "Yekan";
-  src: url("../../fonts/B_Yekan/Yekan.ttf") format("TTF");
+  src: url("Yekan.ttf") format("TTF");
 }
