--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,10 +12,9 @@ $font-size-big: 4rem;
 //Colors
 $color-light-grey: #f2f2f2f2;
 $color-primary: #ad4a4f;
-$color-second-primary: #8d69b3;
+$color-second-primary: #a07fc4;
 $color-second-primary-navLink: #c69ff0;
 $color-second-primary-active: #542c80bb;
 $color-black: #1e1e1e;
 $color-black-main: #000;
-$colors-back-ground: #1e1e1e1e;
-$color-font-grey: #414141;
+$colors-back-ground: #cebacd;
