--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -17,4 +17,4 @@ $color-second-primary-navLink: #c69ff0;
 $color-second-primary-active: #542c80bb;
 $color-black: #1e1e1e;
 $color-black-main: #000;
-$colors-back-ground: #cebacd;
+$colors-back-ground: #e7cbe6;
