--- a/css/landing.css
+++ b/css/landing.css
@@ -326,7 +326,7 @@ html {
 }
 
 body {
-  background-color: #cebacd;
+  background-color: #e7cbe6;
   box-sizing: border-box;
 }
 
@@ -845,6 +845,12 @@ body {
   flex-direction: row;
   justify-content: center;
 }
+@media (max-width: 48rem) {
+  .main-grid-1__layaout-1--box {
+    margin-top: 2rem;
+    margin-bottom: 1.4rem;
+  }
+}
 .main-grid-1__layaout-1--box--link {
   display: inline-block;
   margin-right: 2rem;
@@ -872,7 +878,7 @@ body {
 }
 
 .main-grid-2 {
-  margin-top: 10rem;
+  margin-top: 5rem;
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
@@ -880,30 +886,36 @@ body {
   align-items: center;
   margin-bottom: 2rem;
 }
-.main-grid-2 .main-grid-2__layout-3 {
+.main-grid-2__layout-3 {
   max-width: 50%;
   text-align: center;
 }
-.main-grid-2__layout-4 {
-  max-width: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.main-grid-2__layout-4 img {
-  display: inline-block;
-  width: 87%;
-}
-
 .main-grid-2__layout-3--title {
   margin-bottom: 2.5rem;
 }
-
-.main-gird-2__layout-4 {
+.main-grid-2__layout-4 {
   max-width: 50%;
 }
-.main-gird-2__layout-4 img {
+.main-grid-2__layout-4 img {
   width: 100%;
+}
+@media (max-width: 48rem) {
+  .main-grid-2 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .main-grid-2__layout-3 {
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  .main-grid-2__layout-3--title {
+    margin-bottom: 2.5rem;
+  }
 }
 
 /*# sourceMappingURL=landing.css.map */
