--- a/sass/pages/_landing.scss
+++ b/sass/pages/_landing.scss
@@ -15,6 +15,10 @@
       display: flex;
       flex-direction: row;
       justify-content: center;
+      @media (max-width: 48rem) {
+        margin-top: 2rem;
+        margin-bottom: 1.4rem;
+      }
       &--link {
         display: inline-block;
         margin-right: 2rem;
@@ -39,37 +43,46 @@
     }
   }
 }
+
 .main-grid-2 {
-  @include main-margin;
+  margin-top: 5rem;
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-around;
   align-items: center;
   margin-bottom: 2rem;
-  .main-grid-2__layout-3 {
+
+  &__layout-3 {
     max-width: 50%;
     text-align: center;
-  }
-  &__layout-4 {
-    max-width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img {
-      display: inline-block;
-      width: 87%;
+    &--title {
+      margin-bottom: 2.5rem;
     }
   }
-}
-.main-grid-2__layout-3--title {
-  margin-bottom: 2.5rem;
-}
-
-.main-gird-2__layout-4 {
-  max-width: 50%;
-  img {
-    width: 100%;
+  &__layout-4 {
+    max-width: 50%;
+    img {
+      width: 100%;
+    }
+  }
+  @media (max-width: 48rem) {
+    @include gird-flex-column;
+    align-items: center;
+    justify-content: center;
+    &__layout-3 {
+      max-width: 100%;
+      text-align: center;
+      margin-bottom: 2rem;
+      &--title {
+        margin-bottom: 2.5rem;
+      }
+    }
+    // &__layout-4 {
+    //   max-width: 100%;
+    //   img {
+    //     width: 50%;
+    //   }
   }
 }
 
